--- a/LOGIN/LOGIN.csproj
+++ b/LOGIN/LOGIN.csproj
@@ -35,9 +35,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="function">
-      <HintPath>..\..\Liang_function\function\bin\Debug\function.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -82,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Liang_function\function\function.csproj">
+      <Project>{9dfd315f-87ba-4ea3-809d-1d349f464278}</Project>
+      <Name>function</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
